feat: add icon props to the button

--- a/frontend/src/assets/styles/global.module.css
+++ b/frontend/src/assets/styles/global.module.css
@@ -2,6 +2,8 @@
 
 @import './vendor/normalize.css' layer(reset.normalize);
 
+@import './vendor/material-symbols.module.css' layer(vendor.material-icons);
+
 @import './variables/index.module.css' layer(defaults);
 
 @import './base/index.module.css' layer(defaults);
