--- a/frontend/src/assets/styles/layers.module.css
+++ b/frontend/src/assets/styles/layers.module.css
@@ -1,3 +1,4 @@
-@layer reset, defaults, themes, patterns, layouts, components, animations, utils, overrides;
+@layer reset, vendor, defaults, themes, patterns, layouts, components, animations, utils, overrides;
 @layer reset.normalize;
+@layer vendor.material-icons;
 @layer themes.dark;
