--- a/frontend/src/components/buttons/Button/Button.module.css
+++ b/frontend/src/components/buttons/Button/Button.module.css
@@ -5,19 +5,22 @@
 
         /* Custom properties */
         --height: var(--button-height, var(--size-11));
-        --width: var(--size-target);
+        --width: var(--size-11);
 
         --border-radius: var(--button-border-radius, var(--height));
         --border-color: var(--button-border-color, var(--color-outline));
         --border-opacity: var(--button-border-opacity, 1);
         --border-width: var(--button-border-width, var(--size-1));
 
-        --padding-start: var(--button-padding-start, var(--padding-6));
-        --padding-end: var(--button-padding-end, var(--padding-6));
+        --padding-inline: var(--button-padding-inline, var(--padding-6));
+        --icon-padding: var(--button-icon-padding, var(--padding-4));
+        --gap: var(--button-icon-text-gap, var(--padding-2));
 
-        --text-align: var(--button-text-align, center);
         --text-color: var(--button-text-color, var(--color-on-primary));
         --text-opacity: var(--button-text-opacity, 1);
+
+        --icon-font-size: var(--button-icon-size, var(--size-6));
+        --icon-font-optical-size: var(--button-icon-optical-size, 20);
 
         --background-color: var(
             --button-background-color,
@@ -33,12 +36,17 @@
         );
 
         /* Button properties */
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: var(--gap);
+
         min-height: var(--height);
         min-width: var(--width);
-        padding-inline-start: var(--padding-start);
-        padding-inline-end: var(--padding-end);
+        padding-inline: var(--padding-inline);
 
-        text-align: var(--text-align);
+        text-align: center;
         color: rgb(var(--text-color) / var(--text-opacity));
 
         border-radius: var(--border-radius);
@@ -57,5 +65,23 @@
     .button:focus-visible {
         outline: rgb(var(--color-outline-focus)) var(--size-2) solid;
         outline-offset: var(--size-1);
+    }
+
+    /* Content */
+    .buttonWithIcon {
+        composes: button;
+
+        padding-inline-start: var(--icon-padding);
+        padding-inline-end: var(--padding-inline);
+    }
+
+    .buttonWithoutLabel {
+        composes: button;
+
+        --icon-font-size: var(--button-icon-size, var(--size-8));
+        --icon-font-optical-size: var(--button-icon-optical-size, 24);
+
+        padding: 0;
+        border-radius: 50%;
     }
 }
