--- a/frontend/src/components/buttons/TextButton/TextButton.module.css
+++ b/frontend/src/components/buttons/TextButton/TextButton.module.css
@@ -14,8 +14,8 @@
         --button-text-color: var(--color-primary);
         --button-text-opacity: 1;
 
-        --button-icon-font-size: var(--size-6);
-        --button-icon-font-optical-size: 20;
+        --button-icon-size: var(--size-6);
+        --button-icon-optical-size: 20;
 
         --button-background-color: transparent;
         --button-background-opacity: 1;
