feat: icon can take an action on clic

--- a/frontend/src/components/Icon/Icon.module.css
+++ b/frontend/src/components/Icon/Icon.module.css
@@ -18,4 +18,17 @@
         composes: icon;
         vertical-align: middle;
     }
+
+    /* Reset button style */
+    button.icon {
+        border: none;
+        background-color: transparent;
+        padding: 0;
+        margin: 0;
+    }
+
+    button.icon:focus-visible {
+        outline: rgb(var(--color-outline-focus)) var(--size-2) solid;
+        outline-offset: var(--size-1);
+    }
 }
