feat: tooltip component

--- a/frontend/src/features/tooltip/Tooltip.module.css
+++ b/frontend/src/features/tooltip/Tooltip.module.css
@@ -1,6 +1,6 @@
 @layer components {
     .tooltip {
-        composes: label-small from '../../assets/styles/patterns/typography.module.css';
+        composes: body-small from '../../assets/styles/patterns/typography.module.css';
 
         background-color: rgb(var(--color-inverse-surface));
         color: rgb(var(--color-inverse-on-surface));
@@ -8,7 +8,7 @@
         border-radius: var(--border-radius-2);
         border-style: none;
 
-        padding-block: var(--padding-1);
+        min-height: var(--size-8);
         padding-inline: var(--padding-2);
 
         display: grid;
@@ -31,7 +31,6 @@
         animation-name: tooltip-appear;
         animation-duration: var(--motion-duration-6);
         animation-timing-function: var(--motion-easing-standard-decelerate);
-        animation-delay: 500ms;
         animation-fill-mode: both;
     }
 
