feat: List component

--- a/frontend/src/features/snackbar/Snackbar.module.css
+++ b/frontend/src/features/snackbar/Snackbar.module.css
@@ -29,7 +29,7 @@
 
         box-shadow: var(--elevation-3);
 
-        position: absolute;
+        position: fixed;
         left: 50%;
         bottom: var(--snackbar-margin);
         translate: -50% 0;
