--- a/frontend/src/assets/styles/variables/size.module.css
+++ b/frontend/src/assets/styles/variables/size.module.css
@@ -37,6 +37,8 @@
     --size-14: 4rem;
     --size-15: 4.5rem;
     --size-16: 5rem;
+    --size-17: 6rem;
+    --size-18: 7rem;
     --size-25: 25rem;
 
     --size-target: var(--size-12);
