--- a/frontend/src/features/posts/Post.module.css
+++ b/frontend/src/features/posts/Post.module.css
@@ -15,6 +15,8 @@
         border: solid rgb(var(--color-outline)) var(--size-1);
         border-radius: var(--border-radius-4);
 
+        color: rgb(var(--color-on-surface));
+
         max-width: var(--size-text-medium);
 
         overflow: hidden;
@@ -61,6 +63,8 @@
 
     .date {
         composes: body-small from '../../assets/styles/patterns/typography.module.css';
+
+        color: rgb(var(--color-on-surface-variant));
     }
 
     .like {
