--- a/frontend/src/layouts/UserHeader/UserHeader.module.css
+++ b/frontend/src/layouts/UserHeader/UserHeader.module.css
@@ -23,6 +23,15 @@
         align-items: center;
 
         z-index: var(--layer-4);
+
+        transition: background-color var(--motion-duration-12)
+            var(--motion-easing-emphasized);
+    }
+
+    .scrolledHeader {
+        composes: header;
+
+        background-color: rgb(var(--color-surface-container));
     }
 
     .navigation {
