--- a/frontend/src/components/buttons/TextButton/TextButton.module.css
+++ b/frontend/src/components/buttons/TextButton/TextButton.module.css
@@ -1,30 +1,34 @@
 @layer components {
-    /* Button styling */
     .textButton {
-        --button-height: var(--size-11);
+        composes: label-large from '../../../assets/styles/patterns/typography.module.css';
 
-        --button-border-radius: var(--button-height);
-        --button-border-style: none;
+        min-height: var(--size-11);
+        min-width: var(--size-11);
 
-        --button-padding-inline: var(--padding-3);
-        --button-icon-padding: var(--padding-3);
-        --button-icon-padding-end: var(--padding-4);
-        --button-icon-text-gap: var(--padding-2);
+        border-radius: var(--size-11);
+        border: none;
 
-        --button-text-color: var(--color-primary);
-        --button-text-opacity: 1;
+        padding-inline-start: var(--padding-3);
+        padding-inline-end: var(--button-padding-end, var(--padding-3));
+        gap: var(--padding-2);
 
-        --button-icon-size: var(--size-6);
-        --button-icon-optical-size: 20;
+        color: rgb(var(--color-primary));
+        background-color: transparent;
+    }
 
-        --button-background-color: transparent;
-        --button-background-opacity: 1;
+    .textButtonIcon {
+        composes: textButton;
 
-        --button-shadow: var(--elevation-0);
+        --button-padding-end: var(--padding-4);
     }
 
     .textButton:disabled {
-        --button-text-color: var(--color-on-surface);
-        --button-text-opacity: var(--state-disabled-text-opacity);
+        color: rgb(
+            var(--color-on-surface) / var(--state-disabled-text-opacity)
+        );
+    }
+
+    .icon {
+        --icon-size: var(--size-6);
     }
 }
