--- a/frontend/src/components/icon-button/OutlinedIconButton/OutlinedIconButton.module.css
+++ b/frontend/src/components/icon-button/OutlinedIconButton/OutlinedIconButton.module.css
@@ -1,43 +1,39 @@
 @layer components {
-    /* Button styling */
     .outlinedIconButton {
-        --button-border-style: solid;
-        --button-border-width: var(--size-1);
-        --button-border-color: var(--color-outline);
-        --button-border-opacity: 1;
+        height: var(--size-11);
+        width: var(--size-11);
 
-        --button-text-color: var(--color-on-surface-variant);
-        --button-text-opacity: 1;
+        display: grid;
+        place-content: center;
 
-        --button-background-color: transparent;
+        border-style: solid;
+        border-width: var(--size-1);
+        border-color: rgb(var(--color-outline));
+        border-radius: var(--border-radius-7);
 
-        --button-shadow: var(--elevation-0);
-    }
-
-    .outlinedIconButtonSelected {
-        composes: outlinedIconButton;
-
-        --button-text-color: var(--color-on-inverse-surface);
-        --button-background-color: var(--color-inverse-surface);
-
-        --button-border-style: none;
-    }
-
-    .outlinedIconButtonUnselected {
-        composes: outlinedIconButton;
-
-        --button-text-color: var(--color-on-surface-variant);
+        color: rgb(var(--color-on-surface-variant));
+        background-color: transparent;
     }
 
     .outlinedIconButton:disabled {
-        --button-text-color: var(--color-on-surface);
-        --button-text-opacity: var(--state-disabled-text-opacity);
-        --button-border-color: var(--color-on-surfave);
-        --button-border-opacity: var(--state-disabled-bg-opacity);
+        color: rgb(
+            var(--color-on-surface) / var(--state-disabled-text-opacity)
+        );
+        border-color: rgb(
+            var(--color-on-surface) / var(--state-disabled-bg-opacity)
+        );
     }
 
-    .outlinedIconButtonSelected:disabled {
-        --button-background-color: var(--color-on-surface);
-        --button-background-opacity: var(--state-disabled-bg-opacity);
+    .outlinedIconButton[aria-pressed='true'] {
+        border-style: none;
+
+        color: rgb(var(--color-on-inverse-surface));
+        background-color: rgb(var(--color-inverse-surface));
+    }
+
+    .outlinedIconButton[aria-pressed='true']:disabled {
+        background-color: rgb(
+            var(--color-on-surface) / var(--state-disabled-bg-opacity)
+        );
     }
 }
