--- a/frontend/src/components/form-inputs/Checkbox/Checkbox.module.css
+++ b/frontend/src/components/form-inputs/Checkbox/Checkbox.module.css
@@ -1,46 +1,57 @@
 @layer components {
-    /* Checkbox styling */
     .checkbox {
-        /* Custom properties */
-        --size: var(--size-6);
-        --height: var(--size);
-        --width: var(--size);
-
-        --border-radius: var(--border-radius-1);
-        --border-color: var(--color-on-surface);
-        --border-opacity: 1;
-        --border-width: var(--size-2);
-
-        --text-color: var(--color-on-primary);
-        --text-opacity: 1;
-        --font-size: 0;
-
-        --background-color: var(--color-primary);
-        --background-opacity: 0;
-
-        /* chekbox properties */
         appearance: none;
-        vertical-align: middle;
+        position: relative;
 
-        width: var(--width);
-        height: var(--height);
+        width: var(--size-11);
+        height: var(--size-11);
+    }
 
-        border-radius: var(--border-radius);
+    /* Check box */
+    .checkbox::before {
+        content: '';
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+
+        width: var(--size-6);
+        height: var(--size-6);
+
+        border-radius: var(--border-radius-1);
         border-style: solid;
-        border-color: rgb(var(--border-color) / var(--border-opacity));
-        border-width: var(--border-width);
+        border-color: rgb(var(--color-on-surface));
+        border-width: var(--size-2);
 
-        background-color: rgb(
-            var(--background-color) / var(--background-opacity)
-        );
-
-        color: rgb(var(--text-color) / var(--text-opacity));
-        font-size: var(--font-size);
+        background-color: transparent;
 
         transition-property: background-color, border-width;
         transition-duration: var(--motion-duration-2);
         transition-timing-function: var(--motion-easing-standard-decelerate),
             var(--motion-easing-standard-accelerate);
+    }
+
+    .checkbox:checked::before {
+        background-color: rgb(var(--color-primary));
+        border-width: 0;
+    }
+
+    .checkbox:disabled::before {
+        border-color: rgb(
+            var(--color-on-surface) / var(--state-disabled-text-opacity)
+        );
+    }
+
+    .checkbox:checked:disabled::before {
+        background-color: rgb(
+            var(--color-on-surface) / var(--state-disabled-text-opacity)
+        );
+    }
+
+    .checkbox:focus-visible::before {
+        outline: rgb(var(--color-outline-focus)) var(--size-2) solid;
+        outline-offset: var(--size-1);
     }
 
     /* Check mark */
@@ -53,35 +64,41 @@
         word-wrap: normal;
         white-space: nowrap;
         direction: ltr;
+        line-height: 1;
         font-weight: 700;
+        color: rgb(var(--color-on-primary));
+        font-size: 0;
 
         display: grid;
         place-content: center;
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
 
         transition: font-size var(--motion-duration-2)
             var(--motion-easing-standard);
     }
 
-    /* States */
-    .checkbox:checked {
-        --background-opacity: 1;
-        --state-layer-color: var(--color-primary);
-        --border-width: 0;
-        --font-size: var(--size);
+    .checkbox:checked::after {
+        font-size: var(--size-6);
+    }
+
+    .checkbox:checked:disabled::after {
+        color: rgb(var(--color-surface));
     }
 
     .checkbox:focus-visible {
-        outline: rgb(var(--color-outline-focus)) var(--size-2) solid;
-        outline-offset: var(--size-1);
+        outline: none;
     }
 
-    .checkbox:disabled {
-        --border-opacity: var(--state-disabled-text-opacity);
-    }
+    .checkboxContainer {
+        width: var(--size-11);
+        height: var(--size-11);
+        border-radius: var(--border-radius-7);
 
-    .checkbox:disabled:checked {
-        --background-opacity: var(--state-disabled-text-opacity);
-        --background-color: var(--color-on-surface);
-        --text-color: var(--color-surface);
+        display: grid;
+        place-items: center;
     }
 }
