--- a/frontend/src/components/InteractiveElement/InteractiveElement.module.css
+++ b/frontend/src/components/InteractiveElement/InteractiveElement.module.css
@@ -11,6 +11,7 @@
         top: 50%;
         left: 50%;
         translate: -50% -50%;
+        z-index: var(--layer-00);
 
         min-height: var(--size-target);
         height: 100%;
